fixing the header responsivness and adding a collapsing button for mobile view

--- a/lms/static/sass/_overrides.scss
+++ b/lms/static/sass/_overrides.scss
@@ -1,11 +1,92 @@
-// Override a Sass variable
 
-div.wrapper-header.nav-container {
+// fixing the header and static pages responsiveness (section.container.about)
+div.wrapper-header.nav-container,
+section#dashboard-main,
+section.container.about {
     min-width: auto !important;
 }
 
-// @media (min-width: 768px) {
-//     .navbar-fixed-top, .navbar-fixed-bottom {
-//         border-radius: 0;
-//     }
-// }
+header div h1.logo {
+    margin: -2px 2px 0 10px;
+}
+
+@media (min-width: 768px) {
+    // hiding the collapsing button when the screen isn't for mobile
+    #my-navbar-toggle {
+        display: none;
+    }
+}
+@media (max-width: 768px) {
+    // hidding the login and register button (being replaced with the collapsing button for mobile)
+    #login-site-nav {
+        display: none;
+    }
+    // fixing dashboard responsiveness
+    div#content section div.wrapper-find-courses,
+    div#dashboard-search-bar,
+    section#my-courses {
+        float: left;
+        width: 95%;
+    }
+
+    // hiding nav link on mobile screens for better looks
+    .doc-link {
+        display: none !important;
+    }
+}
+// the collapsing button
+.my-icon-bar {
+    background-color: #888;
+    display: block;
+    width: 22px;
+    height: 2px;
+    border-radius: 1px;
+    margin-top: 4px;
+}
+
+#my-navbar-toggle {
+    position: relative;
+    float: right;
+    padding: 9px 10px;
+    margin-top: 8px;
+    margin-right: 15px;
+    margin-bottom: 8px;
+    background-color: transparent;
+    background-image: none;
+    border-color: #ddd !important;
+    box-shadow: none;
+    border: 1px solid transparent;
+    border-radius: 4px;
+}
+
+#my-navbar-toggle:focus,
+#my-navbar-toggle:hover {
+    background-color: #ddd;
+}
+
+#my-navbar-toggle:focus {
+    outline: 0;
+}
+
+div#myDropdown.my-dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f9f9f9;
+    border-radius: 4px;
+    min-width: 160px;
+    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    top: 72px;
+    right: 4px;
+}
+
+#myDropdown a {
+    color: #0075b4;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+
+#myDropdown a:hover {
+    background-color: #f1f1f1;
+}
